src/objects/MN_Corp_ID__c.object
<CustomObject>
    <description>This object is part of Global Customer Master Application. It has been created to keep track of linking between GCM NUP to Corp Id in MN. Relationship from GCM NUP -&gt; Corp Id is one to many.</description>
    <fields>
        <fullName>GCM_Account_Name__c</fullName>
        <formula>Global_Customer__r.Account_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GCM Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Customer__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Global Customer</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Global Customer should be NXP Ultimate Parent.</errorMessage>
            <filterItems>
                <field>Customer__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Global_Enterprise</value>
            </filterItems>
            <infoMessage>Global Customer should be NXP Ultimate Parent.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Customer__c</referenceTo>
        <relationshipLabel>MN Corp IDs</relationshipLabel>
        <relationshipName>MN_Corp_IDs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MN_Corporate_Id_OId__c</fullName>
        <externalId>true</externalId>
        <label>MN Corporate Id OId</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>NXP_Global_Id__c</fullName>
        <formula>Global_Customer__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NXP Global Id</label>
        <type>Text</type>
    </fields>
    <label>MN Corp ID</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>GCM_Account_Name__c</columns>
        <columns>Global_Customer__c</columns>
        <columns>MN_Corporate_Id_OId__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>MN Corp ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MN Corp IDs</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>